--- a/CS4071_HW4_3.md
+++ b/CS4071_HW4_3.md
@@ -1,1 +1,183 @@
-### askdjlksaj
+``` mermaid
+
+graph TD
+  10
+  7
+  3a
+  5
+  9
+  2a
+  3b
+  2b
+  4a
+  4b
+  
+```
+
+``` mermaid
+
+graph TD
+  4c --- 2a
+  4c --- 2b
+  10
+  7
+  3a
+  5
+  9
+  3b
+  4a
+  4b
+  
+```
+
+``` mermaid
+
+graph TD
+  6 --- 3a
+  6 --- 3b
+  4c --- 2a
+  4c --- 2b
+  10
+  7
+  5
+  9
+  4a
+  4b
+  
+```
+
+``` mermaid
+
+graph TD
+  8 --- 4a
+  8 --- 4b
+  6 --- 3a
+  6 --- 3b
+  4c --- 2a
+  4c --- 2b
+  10
+  7
+  5
+  9
+  
+```
+
+``` mermaid
+
+graph TD
+  9b --- 4c
+  9b --- 5
+  8 --- 4a
+  8 --- 4b
+  6 --- 3a
+  6 --- 3b
+  4c --- 2a
+  4c --- 2b
+  10
+  7
+  9a
+  
+```
+
+``` mermaid
+
+graph TD
+  13 --- 6
+  13 --- 7
+  9b --- 4c
+  9b --- 5
+  8 --- 4a
+  8 --- 4b
+  6 --- 3a
+  6 --- 3b
+  4c --- 2a
+  4c --- 2b
+  10
+  9a
+  
+```
+
+``` mermaid
+
+graph TD
+  17 --- 8
+  17 --- 9a
+  13 --- 6
+  13 --- 7
+  9b --- 4c
+  9b --- 5
+  8 --- 4a
+  8 --- 4b
+  6 --- 3a
+  6 --- 3b
+  4c --- 2a
+  4c --- 2b
+  10
+  
+```
+
+``` mermaid
+
+graph TD
+  19 --- 9b
+  19 --- 10
+  17 --- 8
+  17 --- 9a
+  13 --- 6
+  13 --- 7
+  9b --- 4c
+  9b --- 5
+  8 --- 4a
+  8 --- 4b
+  6 --- 3a
+  6 --- 3b
+  4c --- 2a
+  4c --- 2b
+  
+```
+
+``` mermaid
+
+graph TD
+  30 --- 13
+  30 --- 17
+  19 --- 9b
+  19 --- 10
+  17 --- 8
+  17 --- 9a
+  13 --- 6
+  13 --- 7
+  9b --- 4c
+  9b --- 5
+  8 --- 4a
+  8 --- 4b
+  6 --- 3a
+  6 --- 3b
+  4c --- 2a
+  4c --- 2b
+  
+```
+
+``` mermaid
+
+graph TD
+  49 --- 19
+  49 --- 30
+  30 --- 13
+  30 --- 17
+  19 --- 9b
+  19 --- 10
+  17 --- 8
+  17 --- 9a
+  13 --- 6
+  13 --- 7
+  9b --- 4c
+  9b --- 5
+  8 --- 4a
+  8 --- 4b
+  6 --- 3a
+  6 --- 3b
+  4c --- 2a
+  4c --- 2b
+  
+```
